==> madex/rollo/rollo.c <==
#include <inc/lm3s9b96.h>
#include <inc/hw_memmap.h>
#include <inc/hw_types.h>
#include <driverlib/debug.h>
#include <driverlib/gpio.h>
#include <driverlib/rom.h>
#include <driverlib/sysctl.h>
#include <driverlib/systick.h>
#include <driverlib/timer.h>
#include <utils/uartstdio.h>
#define NUM_INPUTS 32
#define NUM_GROUPS 16
#define DEBOUNCE_TIME 10
#define PORTA GPIO_PORTA_DATA_R
#define PORTB GPIO_PORTB_DATA_R
#define SER   (1 << 5)  // PORTB
#define RCK_O (1 << 6)  // PORTB
#define SCK   (1 << 7)  // PORTB
#define RCK_I (1 << 7)  // PORTA
#define IN_H1 (1 << 1)  // I1
#define IN_R1 (1 << 6)  // I2
#define IN_H2 (1 << 3)  // I3
#define IN_R2 (1 << 2)  // I4
#define IN_H3 (1 << 5)  // I5
#define IN_R3 (1 << 4)  // I6

void readInputs(void) {
	unsigned char row, i, val, changes;
	input_t *in_ptr = inputs;

	for (row = 0; row < 6; row++) {
		val = (1 << row);
		for (i = 0; i < 6; i++) {
			if (val & 1)
				PORTB |= SER;
			else
				PORTB &= ~SER;
			wait();
			PORTB |= SCK;
			wait();
			//GPIOPinWrite(GPIO_PORTB_BASE, SER, val & 1);
			//GPIOPinWrite(GPIO_PORTB_BASE, SCK, 1);
			val >>= 1;
			PORTB &= ~SCK;
			//GPIOPinWrite(GPIO_PORTB_BASE, SCK, 0);
		}
		PORTB &= ~SER;
		wait();
	 	PORTA |= RCK_I;
	 	wait();
		PORTA &= ~RCK_I;
    	//GPIOPinWrite(GPIO_PORTA_BASE, RCK_I, 1);
    	//GPIOPinWrite(GPIO_PORTA_BASE, RCK_I, 0);
    	val =  (GPIOPinRead(GPIO_PORTA_BASE, IN_H1) << 0) |
			   (GPIOPinRead(GPIO_PORTA_BASE, IN_R1) << 1) |
			   (GPIOPinRead(GPIO_PORTA_BASE, IN_H2) << 2) |
			   (GPIOPinRead(GPIO_PORTA_BASE, IN_R2) << 3) |
			   (GPIOPinRead(GPIO_PORTA_BASE, IN_H3) << 4) |
			   (GPIOPinRead(GPIO_PORTA_BASE, IN_R3) << 5);
    	changes = val ^ intputs_new[row];
		intputs_new[row] = val;
		for (i = 0; i < 6; i++) {
			  procInput(in_ptr, &intputs_new[row], &inputs_debounced[row], changes, i);
			  in_ptr++;
		}
    }	
	
	// Am ende strom sparen
	//GPIOPinWrite(GPIO_PORTB_BASE, SER, 0)
	PORTB &= ~SER;
	for (i = 0; i < 6; i++) {
		PORTB |= SCK;
		wait();
		//GPIOPinWrite(GPIO_PORTB_BASE, SCK, 1);
		val >>= 1;
		PORTB &= ~SCK;
		//GPIOPinWrite(GPIO_PORTB_BASE, SCK, 0);
		wait();
	}
}

void setOutputs(void) {
    unsigned long val = outputs, i;
    for (i = 0; i < 32; i++) {
        GPIOPinWrite(GPIO_PORTB_BASE, SER, val & 1);
        GPIOPinWrite(GPIO_PORTB_BASE, SCK, 1);
        val >>= 1;
        GPIOPinWrite(GPIO_PORTB_BASE, SCK, 0);
    }
    GPIOPinWrite(GPIO_PORTB_BASE, RCK_O, 1);
    GPIOPinWrite(GPIO_PORTB_BASE, RCK_O, 0);
}
