==> madex/rollo/esp32/main/rollo.c <==
#include <string.h>
#include <stdio.h>
#include <time.h>
#include "freertos/FreeRTOS.h"
#include "freertos/semphr.h"
#include "driver/gpio.h"
#include "esp_rom_sys.h"
#include "config.h"
#include "rollo.h"
#include "storage.h"
#define SWITCH_TIME 30 // *10ms
#define DEBUG
#define NUM_INPUTS    36
#define NUM_OUTPUTS   10
#define DEBOUNCE_TIME  5
#define OUT_ALLE   (OUT(0) | OUT(1) | OUT(2) | OUT(3) | OUT(4) |  \
                    OUT(5) | OUT(6) | OUT(7) | OUT(8) | OUT(9))
#define OUT_ALLE2   (OUT(0) | OUT(1) | OUT(2) | OUT(3) | OUT(4) |  \
                    OUT(5) | OUT(6) | OUT(7) | OUT(9))
#define OUT_OHNE_MO (OUT(1) | OUT(2) | OUT(3) |  \
                     OUT(6) | OUT(7) | OUT(9))
#define OUT_TUEREN (OUT(0) | OUT(4) | OUT(5))
#define SET_TIME(hour, minute)   (hour*60*60 + minute*60)
#define MO (1 << 0)
#define DI (1 << 1)
#define MI (1 << 2)
#define DO (1 << 3)
#define FR (1 << 4)
#define SA (1 << 5)
#define SO (1 << 6)
#define MO_FR    (MO | DI | MI | DO | FR)
#define SO_DO    (SO | MO | DI | MI | DO)
#define SA_SO    (SA | SO)
#define FR_SA    (FR | SA)

static void readInputs(void) {
	unsigned char row, i, val, changes;
	input_t *in_ptr = inputs;
	// 6 nullen laden
	gpio_set_level(PIN_SER_I, 0);
	for (i = 0; i < 6; i++) {
		wait();
		gpio_set_level(PIN_SCK_I, 1);
		wait();
		gpio_set_level(PIN_SCK_I, 0);
	}
	gpio_set_level(PIN_SER_I, 1);
	wait();
	for (row = 0; row < 6; row++) {
		gpio_set_level(PIN_SCK_I, 1);
		wait();
		gpio_set_level(PIN_RCK_I, 1);
		gpio_set_level(PIN_SCK_I, 0);
		gpio_set_level(PIN_SER_I, 0);

		wait();

		gpio_set_level(PIN_RCK_I, 0);
		wait();
		wait();
		wait();

		val = ~((gpio_get_level(PIN_IN_H1) << 0) |
			    (gpio_get_level(PIN_IN_R1) << 1) |
			    (gpio_get_level(PIN_IN_H2) << 2) |
			    (gpio_get_level(PIN_IN_R2) << 3) |
			    (gpio_get_level(PIN_IN_H3) << 4) |
			    (gpio_get_level(PIN_IN_R3) << 5)) & 0x3f;
    	changes = val ^ inputs_new[row];
		inputs_new[row] = val;
		for (i = 0; i < 6; i++) {
			  procInput(in_ptr, &inputs_new[row], &inputs_debounced[row], changes, i);
			  in_ptr++;
		}
    }
	// Am ende strom sparen
	gpio_set_level(PIN_SCK_I, 1);
	wait();
	gpio_set_level(PIN_SCK_I, 0);
	wait();
	gpio_set_level(PIN_RCK_I, 1);
	wait();
	gpio_set_level(PIN_RCK_I, 0);
}

static void setOutputs(void) {
	unsigned long val = ~outputs, i;
	gpio_set_level(PIN_SER_O, 0);
	gpio_set_level(PIN_SCK_O, 0);
	wait();
	gpio_set_level(PIN_SCK_O, 1);
	wait();
	gpio_set_level(PIN_SCK_O, 0);
	wait();
	wait();
    for (i = 0; i < 32; i++) {
        gpio_set_level(PIN_SER_O, val & 1);
    	gpio_set_level(PIN_SCK_O, 1);
    	wait();
        val >>= 1;
        gpio_set_level(PIN_SCK_O, 0);
        wait();
    }
    gpio_set_level(PIN_RCK_O, 1);
    wait();
    gpio_set_level(PIN_RCK_O, 0);
}
